--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body {
     border: 1px solid;
     padding: 1em;
     margin: 0.5em;
-    width: 18em;
+    width: 33em;
+    text-align:center;
+
 }
 .buyButton {
     background-color: grey;
     padding : 1em; 
-    border : 0.2em solid;
+    border : 2px solid;
     border-radius: 1em;
     margin : 0.3em;
     width: em;
@@ -42,3 +44,34 @@ body {
     background-color: #feac07;
 }
 .PayNowww:hover{background-color: #fed907;}
+
+.latestCarttable{
+    border-collapse: collapse;
+    width: 110%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td{
+padding: 1em;
+}
+
+/* table{
+    border-collapse: collapse;
+    width: 70%;
+    }
+    /* td{
+    border: 2px solid black;
+    margin: 1em;
+    padding: 8px;
+    
+    } */
+
+.featuredPizza {
+    background-color: rgb(177, 25, 106);
+    border : 1px solid;
+    border-radius : 1em;
+    padding : 1em;
+    margin: 0.5em;
+    width: 33em;
+}
