--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
     padding: 2em;   
 }
 .latestCart {
-    background-color: rgb(25, 151, 151);
+    /* background-color: rgb(25, 151, 151); */
+    background-color: rgb(115, 197, 197);
     border: 1px solid;
     border-radius : 0.5em;
     padding: 1em;
